--- a/Dicee - Swift/Base.lproj/Main.storyboard
+++ b/Dicee - Swift/Base.lproj/Main.storyboard
@@ -20,58 +20,76 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="GreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="cgK-Ls-6Vi">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GGt-H8-0rR" userLabel="Top View">
-                                <rect key="frame" x="0.0" y="34" width="414" height="269"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Xah-zt-yaL">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="DiceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="jTk-4e-5uZ">
-                                        <rect key="frame" x="87" y="70" width="240" height="128"/>
-                                    </imageView>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GGt-H8-0rR" userLabel="Top View">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="272"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="jTk-4e-5uZ">
+                                                <rect key="frame" x="109" y="72" width="196" height="128"/>
+                                            </imageView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="jTk-4e-5uZ" firstAttribute="centerY" secondItem="GGt-H8-0rR" secondAttribute="centerY" id="daq-aM-rCv"/>
+                                            <constraint firstItem="jTk-4e-5uZ" firstAttribute="centerX" secondItem="GGt-H8-0rR" secondAttribute="centerX" id="y2s-op-zfA"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UrY-WL-nS4" userLabel="Middle View">
+                                        <rect key="frame" x="0.0" y="273" width="414" height="272"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" spacing="95" translatesAutoresizingMaskIntoConstraints="NO" id="Ibs-vI-5N2">
+                                                <rect key="frame" x="59.5" y="86" width="295" height="100"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceTwo" translatesAutoresizingMaskIntoConstraints="NO" id="XVg-tN-UOd">
+                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    </imageView>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="3ts-xN-BbV">
+                                                        <rect key="frame" x="195" y="0.0" width="100" height="100"/>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="Ibs-vI-5N2" firstAttribute="centerX" secondItem="UrY-WL-nS4" secondAttribute="centerX" id="MO2-n8-OZI"/>
+                                            <constraint firstItem="Ibs-vI-5N2" firstAttribute="centerY" secondItem="UrY-WL-nS4" secondAttribute="centerY" id="gSl-T4-MBC"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3He-0y-U2K" userLabel="Bottom View">
+                                        <rect key="frame" x="0.0" y="546" width="414" height="272"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D95-Ng-4hV">
+                                                <rect key="frame" x="157" y="111" width="100" height="50"/>
+                                                <color key="backgroundColor" red="0.60594880579999999" green="0.11350636930000001" blue="0.1245979592" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="50" id="na2-JU-d9l"/>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="u8i-1h-Qa0"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                                <state key="normal" title="Roll">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="D95-Ng-4hV" firstAttribute="centerY" secondItem="3He-0y-U2K" secondAttribute="centerY" id="731-9Z-Nes"/>
+                                            <constraint firstItem="D95-Ng-4hV" firstAttribute="centerX" secondItem="3He-0y-U2K" secondAttribute="centerX" id="Apw-dR-UCj"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <constraints>
-                                    <constraint firstItem="jTk-4e-5uZ" firstAttribute="centerY" secondItem="GGt-H8-0rR" secondAttribute="centerY" id="daq-aM-rCv"/>
-                                    <constraint firstItem="jTk-4e-5uZ" firstAttribute="centerX" secondItem="GGt-H8-0rR" secondAttribute="centerX" id="y2s-op-zfA"/>
-                                </constraints>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UrY-WL-nS4" userLabel="Middle View">
-                                <rect key="frame" x="0.0" y="311" width="414" height="271"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceTwo" translatesAutoresizingMaskIntoConstraints="NO" id="XVg-tN-UOd">
-                                        <rect key="frame" x="20" y="20" width="120" height="120"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceOne" translatesAutoresizingMaskIntoConstraints="NO" id="3ts-xN-BbV">
-                                        <rect key="frame" x="235" y="20" width="120" height="120"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3He-0y-U2K" userLabel="Bottom View">
-                                <rect key="frame" x="0.0" y="590" width="414" height="272"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D95-Ng-4hV">
-                                        <rect key="frame" x="20" y="20" width="143" height="67"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" red="0.60594880579999999" green="0.11350636930000001" blue="0.1245979592" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                        <state key="normal" title="Roll">
-                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </state>
-                                    </button>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </view>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Xah-zt-yaL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="3gZ-GY-89p"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Xah-zt-yaL" secondAttribute="bottom" id="8WU-0t-g9l"/>
+                            <constraint firstItem="Xah-zt-yaL" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="C3j-aM-x41"/>
                             <constraint firstAttribute="bottom" secondItem="cgK-Ls-6Vi" secondAttribute="bottom" id="LHJ-v3-PAX"/>
                             <constraint firstItem="cgK-Ls-6Vi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="QHv-Zl-Wiz"/>
                             <constraint firstItem="cgK-Ls-6Vi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="UYZ-su-Jsg"/>
                             <constraint firstAttribute="trailing" secondItem="cgK-Ls-6Vi" secondAttribute="trailing" id="fp7-iU-42H"/>
+                            <constraint firstItem="Xah-zt-yaL" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="jqe-Xk-0lr"/>
                         </constraints>
                     </view>
                     <connections>
@@ -81,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="31.884057971014496" y="41.517857142857139"/>
+            <point key="canvasLocation" x="181.15942028985509" y="29.464285714285712"/>
         </scene>
     </scenes>
     <resources>
